--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,6 +9,22 @@
         require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
       </script>
     <% } %>
+    <style>
+        html, body{
+            width:100%;
+            height:100%;
+            overflow: hidden;
+            margin:0px;
+        }
+
+        body{
+            background: #272727;
+        }
+
+        #app{
+            height: 100%;
+        }
+    </style>
   </head>
   <body>
     <div id="app"></div>
